--- a/topaz-scoring/index.html
+++ b/topaz-scoring/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>topaz-scoring</title>
+    <title>TOPAZ 2.0 - Dance Competition Scoring</title>
+    <meta name="description" content="TOPAZ 2.0 Dance Competition Scoring System - Heritage Since 1972" />
   </head>
   <body>
     <div id="root"></div>
